<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="comments_hint">Write…</string>
    <string name="feeds_empty_label">You need to follow someone to see their feeds</string>
    <string name="uploading_post">Uploading Post…</string>
    <string name="widget_title">Around You Feeds</string>
    <string name="no_internet_connection">No Internet Connection Found!</string>
    <string name="no_location_found">Location Services Not Found!</string>
    <string name="enable_location_settings">Click here to Enable Location Services.</string>
    <string name="delete_video">Do you want to delete this video?</string>
    <string name="storage_permission_request">Allow Storage Access to share Recorded Videos.</string>
    <string name="delete">Delete</string>
    <string name="profile_photo">Profile Picture</string>
    <string name="like_icon">Like Icon</string>
    <string name="comments_icon">Comments Icon</string>
    <string name="views_icon">Views Icon</string>
    <string name="cancel">Cancel</string>
    <string name="error_post_like">Like failed!</string>
    <string name="error_empty_comment">Write something…</string>
    <string name="error_post_comment">Comment failed!</string>
    <string name="login_failed">Oops! You have been logged out</string>
    <string name="follow_someone">You need to sign in to follow someone.</string>
    <string name="shared_around_success">Your video has been successfully shared Around!</string>
    <string name="maps">Map View</string>
    <string name="around_you">Around You</string>
    <string name="comment_error">Oops… Cannot post comment</string>
    <string name="cancel_recording">Video Recording Cancelled</string>
    <string name="video_file_not_found">Cannot find video file!</string>
    <string name="video_compressed">Recorded video has been successfully compressed!</string>
    <string name="bitmap_resize_failed">Resizing Bitmap Failed!</string>
    <string name="following">Following</string>
    <string name="profile_view">View Profile</string>
    <string name="manage_followers">Manage Followers</string>
    <string name="record_video">Record Video</string>
    <string name="add_friends">Manage Followers</string>
    <string name="recipients_location_permission">Allow location permission to post Around You!</string>
    <string name="content_authority" translatable="false">io.wyntr.peepster</string>
    <string name="sync_account_type" translatable="false">io.wyntr.peepster</string>
    <string name="user_logged_out_error">Oops! You are Logged Out!</string>
    <string name="swipe_to_comment">Swipe Up to Comment!</string>
    <string name="comment_success">Comment Posted Successfully!</string>
    <string name="loading_video">Loading Video…</string>
    <string name="no_description">No description found!</string>
    <string name="liked">Liked!</string>
    <string name="empty_geo_feeds_label">No Feeds found Around You! Make a new Post :)</string>
    <string name="user_info_no_name">John Doe</string>
    <string name="follow_user_error">Oops! Following this user failed. Try Again!</string>

    <string name="login_logo_desc">Login Proxsee Logo</string>
    <string name="progress_logging_in">Logging In…</string>
    <string name="facebook_app_id" translatable="false">1781597428832411</string>
    <string name="error_user_not_signed_in">Please Sign In to create Post!</string>
    <string name="error_upload_task_create">Oops… Something went wrong!</string>
    <string name="share_around">Share Around</string>
    <string name="app_name">Proxsee</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="error_external_storage">External Storage Not Available</string>
    <string name="maps_api_key" translatable="false">AIzaSyC0G1YmefBAOeEhFd8CPEr0TpW5Ye6XxRI</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="copyright" translatable="false">Copyright © 2016 Wyntr. All rights reserved.</string>

    <string name="comment_box_label">Type…</string>


    <string name="send_comment">Comment</string>


    <string name="swipe_up_text">Swipe Up for Comments!</string>


    <!-- Strings related to login -->
</resources>


