<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/users_container"
            android:background="@color/grey_100"
            android:layout_height="50dp"
            android:padding="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_author_icon"
                android:contentDescription="@string/profile_photo"
                android:layout_width="@dimen/post_author_icon_size"
                android:layout_height="@dimen/post_author_icon_size"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/post_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/post_author_icon"
                android:layout_marginStart="4dp"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/primary_text_light_nodisable" />

            <TextView
                android:id="@+id/post_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/post_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />
        <TextView
            android:id="@+id/post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            android:ellipsize="end" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_num_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/post_num_likes"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/comment_num"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/views_num"
                android:textSize="14sp"
                android:textColor="@android:color/secondary_text_light"
                android:layout_gravity="end"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/post_like_icon"
                android:contentDescription="@string/like_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_heart_outline_grey600_18dp"/>
            <ImageView
                android:id="@+id/post_comment_icon"
                android:layout_width="30dp"
                android:contentDescription="@string/comments_icon"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/post_like_icon"
                android:src="@drawable/ic_comment_multiple_outline_grey600_18dp" />

            <ImageView
                android:layout_width="30dp"
                android:contentDescription="@string/views_icon"
                android:layout_height="30dp"
                android:layout_marginEnd="6dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_eye_grey600_18dp"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>